[tool.poetry]
name = "image-processor"
version = "0.1.0"
description = "Background removal tool"
authors = ["Antigravity"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-python = "*"
numpy = "*"
torch = "*"
torchvision = "*"
pillow = "*"
transformers = "4.38.2"
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
scipy = "^1.17.1"
rembg = "^2.0.74"
onnxruntime = "^1.24.4"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
